# littlegame

./: .clangd  CMakeLists.txt
src/: main.cpp  shaderloader.cpp  shaderloader.h
